--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -34,3 +34,37 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
+server {
+    listen 80;
+    server_name mealie.toolshogar.cl;
+
+    location / {
+        proxy_pass http://mealie:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
+server {
+    listen 80;
+    server_name monica.toolshogar.cl;
+
+    location / {
+        proxy_pass http://monica-app:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
+
+server {
+    listen 80;
+    server_name openproject.toolshogar.cl;
+
+    location / {
+        proxy_pass http://openproject:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
