--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -68,3 +68,27 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
+server {
+    listen 80;
+    server_name penpot.toolshogar.cl;
+
+    location / {
+        proxy_pass http://penpot-frontend:9001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
+server {
+    listen 80;
+    server_name firefly.toolshogar.cl;
+
+    location / {
+        proxy_pass http://firefly_iii_app:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
