--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -84,7 +84,7 @@ server {
     server_name firefly.toolshogar.cl;
 
     location / {
-        proxy_pass http://firefly_iii_app:8080;
+        proxy_pass http://fireflyii-app:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
