--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -91,4 +91,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+server {
+    listen 80;
+    server_name gitlab.toolshogar.cl;
 
+    location / {
+        proxy_pass http://gitlab-ce:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
