--- a/envs/penpot-back.env
+++ b/envs/penpot-back.env
@@ -6,3 +6,4 @@ PENPOT_SMTP_URI=smtp://localhost:1025
 PENPOT_MQ_URI=nats://localhost:4222
 PENPOT_DEMO_USER_EMAIL=demo@penpot.app
 PENPOT_DEMO_USER_PASSWORD=demo
+PENPOT_FLAGS="enable-registration enable-login disable-secure-session-cookies"
