--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -190,7 +190,7 @@ services:
     container_name: gitlab-runner    
     restart: always
     depends_on:
-      - web
+      - gitlab-ce
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - 'data-gitlab-runner:/etc/gitlab-runner'
@@ -217,6 +217,7 @@ services:
       - fireflyii-app
       - fireflyii-db
       - fireflyii-cron
+      - gitlab-ce
 volumes:
   data-nginx:
     driver: local
