--- a/envs/penpot-front.env
+++ b/envs/penpot-front.env
@@ -1,4 +1,4 @@
-PENPOT_PUBLIC_URI=http://localhost
-PENPOT_BACKEND_URI=http://localhost
-PENPOT_EXPORTER_URI=http://localhost
-PENPOT_WS_BACKEND_URI=ws://localhost
+PENPOT_PUBLIC_URI=http://penpot.toolshogar.cl
+PENPOT_BACKEND_URI=http://penpot-backend
+PENPOT_EXPORTER_URI=http://penpot-exporter
+PENPOT_WS_BACKEND_URI=ws://penpot-backend
