--- a/envs/penpot-back.env
+++ b/envs/penpot-back.env
@@ -1,4 +1,4 @@
-PENPOT_PUBLIC_URI=http://localhost
+PENPOT_PUBLIC_URI=http://penpot-backend
 PENPOT_DATABASE_URI=postgresql://penpot:penpot@penpot-postgres:5432/penpot
 PENPOT_REDIS_URI=redis://penpot-redis:6379/0
 PENPOT_FILES_BASE_URI=/opt/data/assets
@@ -7,3 +7,6 @@ PENPOT_MQ_URI=nats://localhost:4222
 PENPOT_DEMO_USER_EMAIL=demo@penpot.app
 PENPOT_DEMO_USER_PASSWORD=demo
 PENPOT_FLAGS="enable-registration enable-login disable-secure-session-cookies"
+PENPOT_HTTP_SERVER_HOST=0.0.0.0
+PENPOT_SMTP_ENABLED=false
+PENPOT_TELEMETRY_ENABLED=true
