--- a/envs/penpot-front.env
+++ b/envs/penpot-front.env
@@ -2,3 +2,4 @@ PENPOT_PUBLIC_URI=http://penpot.toolshogar.cl
 PENPOT_BACKEND_URI=http://penpot-backend
 PENPOT_EXPORTER_URI=http://penpot-exporter
 PENPOT_WS_BACKEND_URI=ws://penpot-backend
+PENPOT_FLAGS="enable-registration enable-login disable-secure-session-cookies"
