--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -77,6 +77,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        add_header x-internal-redirect "$upstream_http_x_accel_redirect";
     }
 }
 server {
