--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,8 +123,8 @@ services:
     env_file: 
       - envs/penpot-back.env
     depends_on:
-      - penpot-postgres
-      - penpot-redis
+      - penpotpostgres
+      - penpotredis
 
   penpot-exporter:
     image: "penpotapp/exporter:latest"
@@ -132,13 +132,13 @@ services:
     env_file: 
       - envs/penpot-exporter.env
 
-  penpot-postgres:
+  penpotpostgres:
     image: "postgres:15"
     restart: always
     env_file: 
       - envs/penpot-db.env
 
-  penpot-redis:
+  penpotredis:
     image: redis:7
     restart: always
 
