--- a/envs/penpot-back.env
+++ b/envs/penpot-back.env
@@ -1,6 +1,6 @@
 PENPOT_PUBLIC_URI=http://penpot-backend
-PENPOT_DATABASE_URI=postgresql://penpot:penpot@penpot-postgres:5432/penpot
-PENPOT_REDIS_URI=redis://penpot-redis:6379/0
+PENPOT_DATABASE_URI=postgresql://penpot:penpot@penpotpostgres:5432/penpot
+PENPOT_REDIS_URI=redis://penpotredis:6379/0
 PENPOT_FILES_BASE_URI=/opt/data/assets
 PENPOT_SMTP_URI=smtp://localhost:1025
 PENPOT_MQ_URI=nats://localhost:4222
