--- a/envs/penpot-exporter.env
+++ b/envs/penpot-exporter.env
@@ -1,5 +1,5 @@
 PENPOT_PUBLIC_URI=http://localhost
 PENPOT_BACKEND_URI=http://localhost
-PENPOT_DATABASE_URI=postgresql://penpot:penpot@penpotpostgres:5432/penpot
+PENPOT_DATABASE_URI=postgresql://penpot:penpot@penpot-postgres:5432/penpot
 PENPOT_PUBLIC_URI=http://penpot-frontend
-PENPOT_REDIS_URI=redis://penpotredis/0
+PENPOT_REDIS_URI=redis://penpot-redis/0
