--- a/envs/penpot-back.env
+++ b/envs/penpot-back.env
@@ -6,8 +6,8 @@ PENPOT_SMTP_URI=smtp://localhost:1025
 PENPOT_MQ_URI=nats://localhost:4222
 PENPOT_DEMO_USER_EMAIL=demo@penpot.app
 PENPOT_DEMO_USER_PASSWORD=demo
-PENPOT_FLAGS= "enable-login-with-password disable-email-verification enable-registration enable-login disable-secure-session-cookies"
-PENPOT_SECRET_KEY=key
+PENPOT_FLAGS= "enable-login-with-password disable-email-verification enable-registration enable-login disable-secure-session-cookies enable-insecure-register enable-prepl-server"
+PENPOT_SECRET_KEY=EfiHWUPQHnyUUQKBz4SzEUoXCRmGys57-2mhffre2154GER3fkikFSw0jPpTNlOz10gizw_wFDkUZTp6ohj08g
 PENPOT_HTTP_SERVER_HOST=0.0.0.0
 PENPOT_SMTP_ENABLED=false
 PENPOT_TELEMETRY_ENABLED=true
