--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,6 +119,7 @@ services:
 
   penpot-backend:
     image: "penpotapp/backend:latest"
+    platform: linux/arm64
     restart: always
     env_file: 
       - envs/penpot-back.env
