--- a/envs/penpot-back.env
+++ b/envs/penpot-back.env
@@ -1,5 +1,9 @@
 PENPOT_PUBLIC_URI=http://penpot-backend
-PENPOT_DATABASE_URI=postgresql://penpot:penpot@penpot-postgres:5432/penpot
+
+PENPOT_DATABASE_URI=postgresql://penpot-postgres/penpot
+PENPOT_DATABASE_USERNAME=penpot
+PENPOT_DATABASE_PASSWORD=penpot
+
 PENPOT_REDIS_URI=redis://penpot-redis:6379/0
 PENPOT_FILES_BASE_URI=/opt/data/assets
 PENPOT_SMTP_URI=smtp://localhost:1025
