--- a/envs/penpot-front.env
+++ b/envs/penpot-front.env
@@ -1,5 +1,5 @@
 PENPOT_PUBLIC_URI=http://penpot.toolshogar.cl
-PENPOT_BACKEND_URI=http://penpot-backend
+PENPOT_BACKEND_URI=http://penpot-backend:6060
 PENPOT_EXPORTER_URI=http://penpot-exporter
 PENPOT_WS_BACKEND_URI=ws://penpot-backend
 PENPOT_FLAGS="enable-registration enable-login disable-secure-session-cookies"
