--- a/envs/fireflyii-app.env
+++ b/envs/fireflyii-app.env
@@ -12,7 +12,7 @@ PAPERTRAIL_PORT=
 APP_LOG_LEVEL=notice
 AUDIT_LOG_LEVEL=info
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=fireflyii-db
 DB_PORT=3306
 DB_DATABASE=firefly
 DB_USERNAME=firefly
