--- a/envs/monica.env
+++ b/envs/monica.env
@@ -1,4 +1,5 @@
-APP_KEY=tu_clave_app
+# APP_KEY=ChangeMeBy32KeyLengthOrGenerated
+APP_KEY=tu_clave_app 
 DB_HOST=monica-db
 DB_USERNAME=tu_usuario_db
 DB_PASSWORD=tu_contraseña_db
