fix big project in gitlab

--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -95,6 +95,7 @@ server {
 server {
     listen 80;
     server_name gitlab.toolshogar.cl;
+    client_max_body_size 50m;
 
     location / {
         proxy_pass http://gitlab-ce:80;
