--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -94,6 +94,18 @@ server {
 }
 server {
     listen 80;
+    server_name firefly-importer.toolshogar.cl;
+
+    location / {
+        proxy_pass http://fireflyii-importer:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+server {
+    listen 80;
     server_name gitlab.toolshogar.cl;
     client_max_body_size 50m;
 
