--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -169,7 +169,16 @@ services:
       - ./envs/fireflyii-db.env
     volumes:
       - firefly_iii_db:/var/lib/mysql
-
+  fireflyii-importer:
+      image: fireflyiii/data-importer:latest
+      hostname: fireflyii-importer
+      restart: always
+      container_name: firefly_iii_importer
+      ports:
+        - '8084:8080'
+      depends_on:
+        - fireflyii-app
+      env_file: ./envs/fireflyii-importer.env
   fireflyii-cron:
     image: alpine
     restart: always
