--- a/envs/fireflyii-importer.env
+++ b/envs/fireflyii-importer.env
@@ -25,7 +25,7 @@ FIREFLY_III_URL=http://firefly.toolshogar.cl
 #
 # This variable can be set from a file if you append it with _FILE
 #
-VANITY_URL=
+VANITY_URL=http://firefly.toolshogar.cl
 
 #
 # Set your Firefly III Personal Access Token (OAuth)
