--- a/envs/monica.env
+++ b/envs/monica.env
@@ -3,3 +3,11 @@ APP_KEY=tu_clave_app
 DB_HOST=monica-db
 DB_USERNAME=tu_usuario_db
 DB_PASSWORD=tu_contraseña_db
+APP_DISABLE_SIGNUP=false
+# The URL of your application.
+APP_URL=http://monica.toolshogar.cl
+
+# Force using APP_URL as base url of your application.
+# You should not need this, unless you are using subdirectory config.
+APP_FORCE_URL=false
+APP_TRUSTED_PROXIES=*
